<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>r2sonic</name>
  <version>0.1.0</version>
  <description>A ROS2 driver for R2Sonic Multibeam Echo Sounders </description>
  <maintainer email="kkrasnosky@usf.edu">Kristopher kkrasnosky</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend> marine_acoustic_msgs </depend>
  <depend> r2sonic_interfaces </depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
